--- a/MyAuto/src/main/resources/application.properties
+++ b/MyAuto/src/main/resources/application.properties
@@ -3,5 +3,8 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/my_auto
 spring.datasource.username=root
 spring.datasource.password=root
+#spring.datasource.password=Santosh@123
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
 
